// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Can skip the log and can extract the name 1`] = `
<Component>
  <ErrorBoundary
    appName="unnamed app"
    appVersion="unknown version"
    fallbackComponent={[Function]}
    name="SimpleComponent"
    skipLog={true}
  >
    <DefaultFallbackComponent
      error={[Error: test]}
      info={
        Object {
          "componentStack": "
    in Something (created by SimpleComponent)
    in div (created by SimpleComponent)
    in SimpleComponent (created by Component)
    in ErrorBoundary (created by Component)
    in Component (created by WrapperComponent)
    in WrapperComponent",
        }
      }
    >
      <styled.div>
        <StyledComponent
          forwardedComponent={
            Object {
              "$$typeof": Symbol(react.forward_ref),
              "attrs": Array [],
              "componentStyle": ComponentStyle {
                "componentId": "sc-bdVaJa",
                "isStatic": true,
                "lastClassName": "gQXkGF",
                "rules": Array [
                  "
    background: #fff;
    padding: 10px;
",
                ],
              },
              "displayName": "styled.div",
              "foldedComponentIds": Array [],
              "render": [Function],
              "styledComponentId": "sc-bdVaJa",
              "target": "div",
              "toString": [Function],
              "warnTooManyClasses": [Function],
              "withComponent": [Function],
            }
          }
          forwardedRef={null}
        >
          <div
            className="sc-bdVaJa gQXkGF"
          >
            <styled.h4>
              <StyledComponent
                forwardedComponent={
                  Object {
                    "$$typeof": Symbol(react.forward_ref),
                    "attrs": Array [],
                    "componentStyle": ComponentStyle {
                      "componentId": "sc-bwzfXH",
                      "isStatic": true,
                      "lastClassName": "ePWlJX",
                      "rules": Array [
                        "
    align-content: center;
    color: red;
    display: flex;
    margin-top: 0;
    margin-bottom: 0;
    padding: 10px;
",
                      ],
                    },
                    "displayName": "styled.h4",
                    "foldedComponentIds": Array [],
                    "render": [Function],
                    "styledComponentId": "sc-bwzfXH",
                    "target": "h4",
                    "toString": [Function],
                    "warnTooManyClasses": [Function],
                    "withComponent": [Function],
                  }
                }
                forwardedRef={null}
              >
                <h4
                  className="sc-bwzfXH ePWlJX"
                >
                  Sorry, we’re having trouble displaying this content right now
                </h4>
              </StyledComponent>
            </styled.h4>
          </div>
        </StyledComponent>
      </styled.div>
    </DefaultFallbackComponent>
  </ErrorBoundary>
</Component>
`;

exports[`Default empty fallback error boundary 1`] = `
<Component>
  <ErrorBoundary
    appName="unnamed app"
    appVersion="unknown version"
    fallbackComponent={[Function]}
    name="SimpleComponent"
    skipLog={false}
  >
    <DefaultFallbackComponent
      error={[Error: test]}
      info={
        Object {
          "componentStack": "
    in Something (created by SimpleComponent)
    in div (created by SimpleComponent)
    in SimpleComponent (created by Component)
    in ErrorBoundary (created by Component)
    in Component (created by WrapperComponent)
    in WrapperComponent",
        }
      }
    >
      <styled.div>
        <StyledComponent
          forwardedComponent={
            Object {
              "$$typeof": Symbol(react.forward_ref),
              "attrs": Array [],
              "componentStyle": ComponentStyle {
                "componentId": "sc-bdVaJa",
                "isStatic": true,
                "lastClassName": "gQXkGF",
                "rules": Array [
                  "
    background: #fff;
    padding: 10px;
",
                ],
              },
              "displayName": "styled.div",
              "foldedComponentIds": Array [],
              "render": [Function],
              "styledComponentId": "sc-bdVaJa",
              "target": "div",
              "toString": [Function],
              "warnTooManyClasses": [Function],
              "withComponent": [Function],
            }
          }
          forwardedRef={null}
        >
          <div
            className="sc-bdVaJa gQXkGF"
          >
            <styled.h4>
              <StyledComponent
                forwardedComponent={
                  Object {
                    "$$typeof": Symbol(react.forward_ref),
                    "attrs": Array [],
                    "componentStyle": ComponentStyle {
                      "componentId": "sc-bwzfXH",
                      "isStatic": true,
                      "lastClassName": "ePWlJX",
                      "rules": Array [
                        "
    align-content: center;
    color: red;
    display: flex;
    margin-top: 0;
    margin-bottom: 0;
    padding: 10px;
",
                      ],
                    },
                    "displayName": "styled.h4",
                    "foldedComponentIds": Array [],
                    "render": [Function],
                    "styledComponentId": "sc-bwzfXH",
                    "target": "h4",
                    "toString": [Function],
                    "warnTooManyClasses": [Function],
                    "withComponent": [Function],
                  }
                }
                forwardedRef={null}
              >
                <h4
                  className="sc-bwzfXH ePWlJX"
                >
                  Sorry, we’re having trouble displaying this content right now
                </h4>
              </StyledComponent>
            </styled.h4>
          </div>
        </StyledComponent>
      </styled.div>
    </DefaultFallbackComponent>
  </ErrorBoundary>
</Component>
`;

exports[`Default fallback error boundary 1`] = `
<Component>
  <ErrorBoundary
    appName="FandomCreator"
    appVersion="v1"
    fallbackComponent={[Function]}
    name="TestBoundaryName"
    skipLog={false}
  >
    <DefaultFallbackComponent
      error={[Error: test]}
      info={
        Object {
          "componentStack": "
    in Something (created by SimpleComponent)
    in div (created by SimpleComponent)
    in SimpleComponent (created by Component)
    in ErrorBoundary (created by Component)
    in Component (created by WrapperComponent)
    in WrapperComponent",
        }
      }
    >
      <styled.div>
        <StyledComponent
          forwardedComponent={
            Object {
              "$$typeof": Symbol(react.forward_ref),
              "attrs": Array [],
              "componentStyle": ComponentStyle {
                "componentId": "sc-bdVaJa",
                "isStatic": true,
                "lastClassName": "gQXkGF",
                "rules": Array [
                  "
    background: #fff;
    padding: 10px;
",
                ],
              },
              "displayName": "styled.div",
              "foldedComponentIds": Array [],
              "render": [Function],
              "styledComponentId": "sc-bdVaJa",
              "target": "div",
              "toString": [Function],
              "warnTooManyClasses": [Function],
              "withComponent": [Function],
            }
          }
          forwardedRef={null}
        >
          <div
            className="sc-bdVaJa gQXkGF"
          >
            <styled.h4>
              <StyledComponent
                forwardedComponent={
                  Object {
                    "$$typeof": Symbol(react.forward_ref),
                    "attrs": Array [],
                    "componentStyle": ComponentStyle {
                      "componentId": "sc-bwzfXH",
                      "isStatic": true,
                      "lastClassName": "ePWlJX",
                      "rules": Array [
                        "
    align-content: center;
    color: red;
    display: flex;
    margin-top: 0;
    margin-bottom: 0;
    padding: 10px;
",
                      ],
                    },
                    "displayName": "styled.h4",
                    "foldedComponentIds": Array [],
                    "render": [Function],
                    "styledComponentId": "sc-bwzfXH",
                    "target": "h4",
                    "toString": [Function],
                    "warnTooManyClasses": [Function],
                    "withComponent": [Function],
                  }
                }
                forwardedRef={null}
              >
                <h4
                  className="sc-bwzfXH ePWlJX"
                >
                  Sorry, we’re having trouble displaying this content right now
                </h4>
              </StyledComponent>
            </styled.h4>
          </div>
        </StyledComponent>
      </styled.div>
    </DefaultFallbackComponent>
  </ErrorBoundary>
</Component>
`;

exports[`Renders nothing when there is null fallback 1`] = `
<Component>
  <ErrorBoundary
    appName="unnamed app"
    appVersion="unknown version"
    fallbackComponent={null}
    name="TestBoundaryName"
    skipLog={false}
  />
</Component>
`;

exports[`Undefined value for fallback should use default fallback 1`] = `
<Component>
  <ErrorBoundary
    appName="unnamed app"
    appVersion="unknown version"
    name="SimpleComponent"
    skipLog={false}
  >
    <DefaultFallbackComponent
      error={[Error: test]}
      info={
        Object {
          "componentStack": "
    in Something (created by SimpleComponent)
    in div (created by SimpleComponent)
    in SimpleComponent (created by Component)
    in ErrorBoundary (created by Component)
    in Component (created by WrapperComponent)
    in WrapperComponent",
        }
      }
    >
      <styled.div>
        <StyledComponent
          forwardedComponent={
            Object {
              "$$typeof": Symbol(react.forward_ref),
              "attrs": Array [],
              "componentStyle": ComponentStyle {
                "componentId": "sc-bdVaJa",
                "isStatic": true,
                "lastClassName": "gQXkGF",
                "rules": Array [
                  "
    background: #fff;
    padding: 10px;
",
                ],
              },
              "displayName": "styled.div",
              "foldedComponentIds": Array [],
              "render": [Function],
              "styledComponentId": "sc-bdVaJa",
              "target": "div",
              "toString": [Function],
              "warnTooManyClasses": [Function],
              "withComponent": [Function],
            }
          }
          forwardedRef={null}
        >
          <div
            className="sc-bdVaJa gQXkGF"
          >
            <styled.h4>
              <StyledComponent
                forwardedComponent={
                  Object {
                    "$$typeof": Symbol(react.forward_ref),
                    "attrs": Array [],
                    "componentStyle": ComponentStyle {
                      "componentId": "sc-bwzfXH",
                      "isStatic": true,
                      "lastClassName": "ePWlJX",
                      "rules": Array [
                        "
    align-content: center;
    color: red;
    display: flex;
    margin-top: 0;
    margin-bottom: 0;
    padding: 10px;
",
                      ],
                    },
                    "displayName": "styled.h4",
                    "foldedComponentIds": Array [],
                    "render": [Function],
                    "styledComponentId": "sc-bwzfXH",
                    "target": "h4",
                    "toString": [Function],
                    "warnTooManyClasses": [Function],
                    "withComponent": [Function],
                  }
                }
                forwardedRef={null}
              >
                <h4
                  className="sc-bwzfXH ePWlJX"
                >
                  Sorry, we’re having trouble displaying this content right now
                </h4>
              </StyledComponent>
            </styled.h4>
          </div>
        </StyledComponent>
      </styled.div>
    </DefaultFallbackComponent>
  </ErrorBoundary>
</Component>
`;
